# google-cloud-cpp

./: .appveyor.yml  .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mdformat.toml  .travis.yml  .typos.toml  .ubsan_suppressions.txt  404.md  ARCHITECTURE.md  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DoxygenLayout.xml  INSTALL.md  MODULE.bazel  README.md  README_8md.html  SECURITY.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  admin__client_8cc.html  admin__client_8cc__incl.map  admin__client_8cc__incl.md5  admin__client_8h.html  admin__client_8h__dep__incl.map  admin__client_8h__dep__incl.md5  admin__client_8h__incl.map  (+684 more)
bigtable/: CMakeLists.txt  README.md
bigtable/admin/: CMakeLists.txt  admin_client.cc  admin_client.h  admin_client_test.cc  column_family.cc  column_family.h  column_family_test.cc  config-version.cmake.in  config.cmake.in  config.pc.in  instance_admin.cc  instance_admin.h  instance_admin_client.cc  instance_admin_client.h  instance_admin_client_test.cc  instance_admin_test.cc  table_admin.cc  table_admin.h  table_admin_test.cc  table_config.cc  table_config.h  table_config_test.cc
bigtable/benchmarks/: .gitignore  CMakeLists.txt  apply_read_latency_benchmark.cc  benchmark.cc  benchmark.h  benchmark_test.cc  constants.h  embedded_server.cc  embedded_server.h  embedded_server_test.cc  endurance_benchmark.cc  format_duration_test.cc  random.cc  random.h  random_mutation.cc  random_mutation.h  random_mutation_test.cc  random_test.cc  scan_throughput_benchmark.cc  setup.cc  setup.h  setup_test.cc
bigtable/ci/: run_integration_tests.sh
bigtable/client/: BUILD  CMakeLists.txt  admin_client.cc  admin_client.h  admin_client_test.cc  bigtable_client.bzl  bigtable_client_testing.bzl  bigtable_client_unit_tests.bzl  bigtable_strong_types.h  build_info.cc.in  build_info.h  cell.cc  cell.h  cell_test.cc  chrono_literals.h  client_options.cc  client_options.h  client_options_test.cc  cluster_config.cc  cluster_config.h  column_family.h  column_family_test.cc  config-version.cmake.in  config.cmake.in  config.pc.in  data.cc  data.h  data_client.cc  data_client.h  data_client_test.cc  data_test.cc  filters.cc  filters.h  filters_test.cc  force_sanitizer_failures_test.cc  grpc_error.cc  grpc_error.h  grpc_error_test.cc  idempotent_mutation_policy.cc  idempotent_mutation_policy.h  (+68 more)
bigtable/doc/: Doxyfile  bigtable-hello-world.md  bigtable-main.dox  bigtable-main.md  no-exception-support.md
bigtable/examples/: BUILD  CMakeLists.txt  README.md  bigtable_hello_world.cc  bigtable_quick_start.cc  bigtable_samples.cc  bigtable_samples_instance_admin.cc  run_examples_emulator.sh  run_examples_production.sh  run_examples_utils.sh
bigtable/tests/: BUILD  CMakeLists.txt  Makefile  admin_integration_test.cc  admin_test.cc  apply_test.cc  data_integration_test.cc  filters_integration_test.cc  install_integration_test.cc  instance_admin_emulator.cc  instance_admin_integration_test.cc  integration_test.cc  integration_tests_utils.sh  mutations_integration_test.cc  run_apply_test.sh  run_integration_tests.sh  run_integration_tests_emulator.sh  run_integration_tests_production.sh
bigtable/tools/: convert_acceptance_tests.py  convert_tests.py  run_emulator_utils.sh
ci/abseil/: CMakeLists.txt  README.md  absl-config.pc.in  cctz.pc.in
ci/install-test/: CMakeLists.txt  Makefile  install_integration_test.cc
ci/otel_collector/: ARCHITECTURE.md  BUILD.bazel  CMakeLists.txt  otel_collector.cc  otel_collector.h  otel_collector_main.cc
ci/test-install/: BUILD  CMakeLists.txt  Makefile  WORKSPACE  bigtable_install_test.cc  install_integration_test.cc  storage_install_test.cc
ci/verify_current_targets/: .bazelrc  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  verify_current_mock_targets.cc
ci/verify_deprecated_targets/: .bazelrc  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  verify_deprecated_proto_targets.cc  verify_deprecated_targets.cc
ci/verify_exported_targets/: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE
ci/verify_quickstart/: CMakeLists.txt
docfx/: .clang-tidy  BUILD.bazel  CMakeLists.txt  README.md  config.h  docfx.bzl  docfx_testing.bzl  doxygen2children.cc  doxygen2children.h  doxygen2children_test.cc  doxygen2docfx.cc  doxygen2markdown.cc  doxygen2markdown.h  doxygen2markdown_test.cc  doxygen2references.cc  doxygen2references.h  doxygen2references_test.cc  doxygen2syntax.cc  doxygen2syntax.h  doxygen2syntax_test.cc  doxygen2toc.cc  doxygen2toc.h  doxygen2toc_test.cc  doxygen2yaml.cc  doxygen2yaml.h  doxygen2yaml_test.cc  doxygen_errors.cc  doxygen_errors.h  doxygen_groups.cc  doxygen_groups.h  doxygen_groups_test.cc  doxygen_pages.cc  doxygen_pages.h  doxygen_pages_test.cc  function_classifiers.cc  function_classifiers.h  function_classifiers_test.cc  generate_metadata.cc  generate_metadata.h  generate_metadata_test.cc  (+20 more)
docfx/product-neutral-guides/: CMakeLists.txt  docs.metadata.json.in  toc.yml.in  transform_guides.cc
docfx/testing/: inputs.cc  inputs.h
examples/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  api_key.cc  batch_logging.cc  gcs2cbt.cc  grpc_credential_types.cc
examples/hello_world_grpc/: CMakeLists.txt  Dockerfile  hello_world.proto  hello_world_grpc.cc
examples/hello_world_http/: hello_world_http.cc  vcpkg.json
firestore/client/: BUILD  CMakeLists.txt  (+7 more)
generator/: ARCHITECTURE.md  BUILD  BUILD.bazel  CMakeLists.txt  discovery_main.cc  generate-libraries.sh  generator.bzl  generator.cc  generator.h  generator_config.proto  generator_config.textproto  generator_test.cc  generator_unit_tests.bzl  google_cloud_cpp_generator.bzl  google_cloud_cpp_generator_integration_tests.bzl  google_cloud_cpp_generator_testing.bzl  google_cloud_cpp_generator_unit_tests.bzl  main.cc  plugin_main.cc  standalone_main.cc  version.h  version_info.h  version_info.h.in
storage/: CMakeLists.txt
super/: CMakeLists.txt  ExternalProjectHelper.cmake
(+40961 files in other folders)
